ref #1_hsnam Swagger UI 추가 REST Service 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-weather.host=api.openweathermap.org
+server.port=8080
+server.servlet.context-path=/noti
+
+weather.host=http://api.openweathermap.org/data/2.5
 weather.app.id=b69b828b5f2e51d39afd4da5f1b10055
 
